--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,22 @@
     padding: 0;
 }
 
+p {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.25rem;
+    line-height: 1.3em;
+}
+
+h1 {
+    font-family: Impact, 'Arial Narrow Bold', sans-serif;
+}
+
+h2 {
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
 body {
-    font-family: Arial, sans-serif;
+    /* font-family: Arial, sans-serif; */
     background-color: #f1f1f1;
     display: flex;
     justify-content: center;
@@ -14,36 +28,37 @@ body {
     flex-direction: column;
 }
 
-.header-content {
-    border: 1px red solid;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-
-    
-}
-
-figure {
-    border: 1px gray solid;
-}
-
-figure img {
-    float: left;
+.header {
+    background: gray;
+    margin: auto;
     position: relative;
-    box-shadow: rgba(0, 0, 0, 0.34) 0px 3px 8px;
-    z-index: -1;
-    inset: 0;
-    /* transform: skewY(-8deg); */
-
 }
 
-.header-description {
-    border: 1px green solid;
-    margin: 10px;
-    flex: 1;
-    text-align: justify;
+.header .wrapper {
     font-size: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 50px;
 }
+
+.image-wrapper img {
+    display: block;
+    width: 100%;
+    height: auto;
+}
+
+.about {
+    background-color: white;
+    box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.75);
+    padding: 4rem;
+    width: min(100vw - 2.5rem, 37.5rem);
+}
+
+.about h2 {
+    margin-bottom: 1.25rem;
+}
+
 
 .header-links {
     border: 1px blue solid;
