--- a/styles.css
+++ b/styles.css
@@ -18,16 +18,16 @@ h2 {
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-body {
-    /* font-family: Arial, sans-serif; */
+/* body {
     background-color: #f1f1f1;
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
     flex-direction: column;
-}
+} */
 
+/* header */
 .header {
     background: gray;
     margin: auto;
@@ -76,7 +76,7 @@ body {
     height: auto;
 } */
 
-.all-projects .icon {
+.wrapper .icon {
     max-width: 4vh;
     height: auto;
 }
@@ -87,3 +87,79 @@ figure > img,
     max-width: 48vh;
     height: auto;
 }
+
+/* main */
+.main .all-projects {
+    margin-block: 5rem;
+    margin-inline: auto;
+    margin: 20px;
+    width: min(100% - 6.25rem, 87.5rem);
+}
+
+.wrapper > h2 {
+    text-align: center;
+    margin: 30px 0px;
+}
+
+.projects {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 500px));
+    gap: 2.5rem;
+    margin-top: 2.5rem;
+    margin-bottom:  1rem;
+    justify-content: center;
+}
+
+.project {
+    box-shadow: rgba(0, 0, 0, 0.34) 0px 3px 8px;
+}
+
+.project:nth-child(even) > .photo-container {
+    background-color: #8a8a8a;
+}
+
+.project > .photo-container {
+    height: 200px;
+    width: 100%;
+    background-color: #535353;
+    color: white;
+    font-size: 1.6rem;
+}
+
+.project-description {
+    padding: 1em;
+}
+
+.project-description h3 {
+    padding-block: 0.2em;
+    font-size: 1.6rem;
+    margin-right: 1em;
+}
+
+.project-description > div {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    border: 1px blue solid;
+    padding: 1em;
+}
+
+
+/* .main {
+    border: 1px red solid;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    /* width: min(100vw - 2.5rem, 37.5rem); */
+    /* width: 100%;
+    margin: 20px 0px;
+}
+
+.all-projects {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 500px));
+    justify-content: center;
+    gap: 2em;
+    margin-bottom: 1em;
+} */ 
