--- a/styles.css
+++ b/styles.css
@@ -16,16 +16,8 @@ h1 {
 
 h2 {
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 3.125rem;
 }
-
-/* body {
-    background-color: #f1f1f1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    flex-direction: column;
-} */
 
 /* header */
 .header {
@@ -35,7 +27,6 @@ h2 {
 }
 
 .header .wrapper {
-    font-size: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -145,21 +136,110 @@ figure > img,
 }
 
 
-/* .main {
-    border: 1px red solid;
+/* footer */
+.footer {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    /* width: min(100vw - 2.5rem, 37.5rem); */
-    /* width: 100%;
-    margin: 20px 0px;
+    background-color: gray;
+    text-align: left;
+    /* justify-content: center;
+    align-items: center; */
+    color: white;
+    width: 100%;
 }
 
-.all-projects {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 500px));
-    justify-content: center;
-    gap: 2em;
-    margin-bottom: 1em;
-} */ 
+.footer > .wrapper {
+    width: min(100vw - 2.5rem, 37.5rem);
+    margin: 20px;
+}
+
+.footer > .wrapper > h2 {
+    padding: 0 0 0.4em 0;
+}
+
+.footer > .wrapper > p {
+    font-size: 1.2rem;
+}
+
+.footer > div .address {
+    padding-block: 2em;
+}
+
+.footer > div .address p,
+.footer > div .phone p,
+.footer > div .email p {
+    font-size: 1rem;
+}
+
+.footer .links {
+    padding-bottom: 1.2em;
+}
+
+.footer-img {
+    height: auto;
+    /* min-width: max-content; */
+    /* width: 100%; */
+    width: min(100vw - 1.25rem, 34.4rem);
+}
+
+@media (max-width: 630px) {
+    .header .wrapper {
+        flex-direction: column;
+        gap: 1.25rem;
+    }
+
+    .about {
+        margin: 0;
+    }
+}
+
+@media (min-width: 630px) and (max-width: 1100px) {
+    .header .wrapper {
+        display: block;
+    }
+
+    .header .image-wrapper {
+        float: left;
+        height: 22rem; 
+        width: 22rem; 
+        margin-right: 1rem;
+    }
+
+    .about {
+        margin-top: 3.75rem;
+        width: min(100vw - 2.5rem, 40rem);
+    }
+
+    .footer {
+        justify-content: center;
+        align-items: center;
+    }
+
+}
+
+/* @media (min-width: 1024px) {
+    .image-wrapper h1 {
+        font-size: 3rem;
+        left: 1rem;
+        text-align: left;
+    }
+
+    .about {
+        margin: auto;
+    }
+
+    .footer .wrapper {
+        align-items: center;
+        flex-direction: column;
+    }
+
+    .footer {
+        justify-content: center;
+        align-items: center;
+    }
+}
+
+@media (min-width: 1280px) {
+    .footer-img {
+        width: calc(100vw - 2.5rem, 40.5rem);
+    }
+} */
