--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,9 @@ h2 {
 .image-wrapper img {
     display: block;
     width: 100%;
+    max-width: 336px;
     height: auto;
+    box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.75);
 }
 
 .about {
@@ -51,31 +53,8 @@ h2 {
 }
 
 
-.header-links {
-    border: 1px blue solid;
-    margin: 10px;
-}
-
-.header-content .icon,
-.links .icon {
-    max-width: 8vh;
-    height: auto;
-}
-
-/* .header-links .linkedin {
-    max-width: 100px;
-    height: auto;
-} */
-
 .wrapper .icon {
     max-width: 4vh;
-    height: auto;
-}
-
-
-figure > img,
-.footer-portrait {
-    max-width: 48vh;
     height: auto;
 }
 
@@ -115,6 +94,10 @@ figure > img,
     background-color: #535353;
     color: white;
     font-size: 1.6rem;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .project-description {
@@ -124,15 +107,24 @@ figure > img,
 .project-description h3 {
     padding-block: 0.2em;
     font-size: 1.6rem;
-    margin-right: 1em;
 }
 
 .project-description > div {
     display: flex;
-    flex-direction: row;
+    justify-content: space-between;
     align-items: center;
-    border: 1px blue solid;
     padding: 1em;
+    margin-right: 12px;
+}
+
+.project-description a {
+    display: flex;
+    align-items: center;
+    flex-shrink: 1;
+}
+
+.project-description p {
+    margin-left: 12px;
 }
 
 
@@ -141,8 +133,8 @@ figure > img,
     display: flex;
     background-color: gray;
     text-align: left;
-    /* justify-content: center;
-    align-items: center; */
+    justify-content: center;
+    align-items: center;
     color: white;
     width: 100%;
 }
@@ -150,6 +142,10 @@ figure > img,
 .footer > .wrapper {
     width: min(100vw - 2.5rem, 37.5rem);
     margin: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 .footer > .wrapper > h2 {
@@ -176,8 +172,6 @@ figure > img,
 
 .footer-img {
     height: auto;
-    /* min-width: max-content; */
-    /* width: 100%; */
     width: min(100vw - 1.25rem, 34.4rem);
 }
 
@@ -189,6 +183,17 @@ figure > img,
 
     .about {
         margin: 0;
+    }
+
+    .footer {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .footer >.wrapper {
+        flex-direction: column;
+        align-items: center;
     }
 }
 
@@ -208,38 +213,5 @@ figure > img,
         margin-top: 3.75rem;
         width: min(100vw - 2.5rem, 40rem);
     }
-
-    .footer {
-        justify-content: center;
-        align-items: center;
-    }
-
 }
 
-/* @media (min-width: 1024px) {
-    .image-wrapper h1 {
-        font-size: 3rem;
-        left: 1rem;
-        text-align: left;
-    }
-
-    .about {
-        margin: auto;
-    }
-
-    .footer .wrapper {
-        align-items: center;
-        flex-direction: column;
-    }
-
-    .footer {
-        justify-content: center;
-        align-items: center;
-    }
-}
-
-@media (min-width: 1280px) {
-    .footer-img {
-        width: calc(100vw - 2.5rem, 40.5rem);
-    }
-} */
